# gpx_tool

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  test.sh
doc/: class_diagram.plant
input/: test_input_1.gpx  test_input_2.gpx  test_output_1.gpx  test_output_2.gpx
src/: command_handler.cpp  command_handler.h  command_parser.cpp  command_parser.h  main.cpp  tmp_check_file.cpp  tmp_check_file.h  tmp_consts.h  tmp_correct_file.cpp  tmp_correct_file.h  tmp_get_nodes.cpp  tmp_get_nodes.h  tmp_get_time.cpp  tmp_get_time.h
src/gpx/: gpx_file.h  gpx_parser.h
src/helpers/: not_implemented.h  printer.h
src/libxml_wrapper/: libxml_gpx_file.cpp  libxml_gpx_file.h  libxml_gpx_parser.cpp  libxml_gpx_parser.h
